# sicxe

./: CMakeLists.txt  README.md  build.sh
demos/SicDemos/brainfuck/: brainfuck.asm
demos/SicDemos/graph-screen/: rain.asm  sier.asm
demos/SicDemos/graph-screen/picture-load/: picture.asm
demos/SicDemos/pong/: pong.asm
demos/SicDemos/snake/: README.md  snake.asm
demos/SicDemos/text-screen/: maze.asm
demos/SicDemos/tictactoe/: README.md
src/common/: instruction_db.cc
tests/: CMakeLists.txt  instruction_db_test.cc  test_util.cc
